--- a/week_0_recurrence.ipynb
+++ b/week_0_recurrence.ipynb
@@ -32,10 +32,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 34,
+   "metadata": {},
    "outputs": [],
    "source": [
     "import sympy\n",
@@ -56,15 +54,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 35,
+   "metadata": {},
    "outputs": [],
    "source": [
+    "import numpy as np\n",
     "def upwards_recursion(n):\n",
-    "    \"\"\"Compute the integrals using the upwards recursion.\"\"\"\n",
-    "    # ENTER YOUR CODE HERE"
+    "    #rec(a) - функция, которая будет считать n-ый интеграл. Из-за того,что тут используется рекурсия для вычисления\n",
+    "    #то для подсчета этого интеграла, надо будет посчитать последовательно и интегралы, которые до него идут\n",
+    "    #и во время этого мы будем наполнять наш массив интегралов, rec(n-1) нужна чтобы наполнить этот массив\n",
+    "    #такие же рассуждения относятся и ко второй функции\n",
+    "    integrate =[]\n",
+    "    def rec(a):\n",
+    "        if a == 0:\n",
+    "            integrate.append(float(np.exp(1) - 1))\n",
+    "            return np.exp(1) - 1\n",
+    "        else:\n",
+    "            b = a*rec(a-1) - 1\n",
+    "            if a <= n:\n",
+    "                integrate.append(float(b))\n",
+    "                return b\n",
+    "    rec(n-1)\n",
+    "    return integrate"
    ]
   },
   {
@@ -76,15 +87,58 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.718281828459045 1.7182818284590453\n",
+      "0.7182818284590451 0.7182818284590452\n",
+      "0.4365636569180902 0.43656365691809046\n",
+      "0.30969097075427054 0.30969097075427143\n",
+      "0.23876388301708218 0.23876388301708565\n",
+      "0.1938194150854109 0.19381941508542824\n",
+      "0.16291649051246537 0.16291649051256946\n",
+      "0.1404154335872576 0.14041543358798622\n",
+      "0.12332346869806088 0.12332346870388973\n",
+      "0.1099112182825479 0.10991121833500754\n",
+      "0.09911218282547907 0.0991121833500754\n",
+      "0.09023401108026974 0.09023401685082952\n",
+      "0.08280813296323686 0.08280820220995427\n",
+      "0.07650572852207915 0.07650662872940558\n",
+      "0.07108019930910814 0.07109280221167809\n",
+      "0.06620298963662208 0.0663920331751714\n",
+      "0.05924783418595325 0.06227253080274239\n",
+      "0.007213181161205284 0.05863302364662064\n",
+      "-0.8701627390983049 0.05539442563917152\n",
+      "-17.533092042867793 0.052494087144258815\n",
+      "-351.66184085735586 0.049881742885176245\n",
+      "-7385.898658004473 0.04751660058870116\n",
+      "-162490.7704760984 0.04536521295142559\n",
+      "-3737288.7209502636 0.04339989788278872\n",
+      "-89694930.30280632 0.041597549186929206\n"
+     ]
+    },
+    {
+     "ename": "AssertionError",
+     "evalue": "\nNot equal to tolerance rtol=1e-07, atol=0\n\nMismatch: 52%\nMax absolute difference: 89694930.34440386\nMax relative difference: 2.15625517e+09\n x: array([ 1.718282e+00,  7.182818e-01,  4.365637e-01,  3.096910e-01,\n        2.387639e-01,  1.938194e-01,  1.629165e-01,  1.404154e-01,\n        1.233235e-01,  1.099112e-01,  9.911218e-02,  9.023401e-02,...\n y: array([1.718282, 0.718282, 0.436564, 0.309691, 0.238764, 0.193819,\n       0.162916, 0.140415, 0.123323, 0.109911, 0.099112, 0.090234,\n       0.082808, 0.076507, 0.071093, 0.066392, 0.062273, 0.058633,...",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAssertionError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-45-817130c18039>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0mnumpy\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtesting\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0massert_allclose\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 6\u001b[0;31m \u001b[0massert_allclose\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mvalues\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mexact\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m//anaconda3/lib/python3.7/site-packages/numpy/testing/_private/utils.py\u001b[0m in \u001b[0;36massert_allclose\u001b[0;34m(actual, desired, rtol, atol, equal_nan, err_msg, verbose)\u001b[0m\n\u001b[1;32m   1499\u001b[0m     \u001b[0mheader\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m'Not equal to tolerance rtol=%g, atol=%g'\u001b[0m \u001b[0;34m%\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0mrtol\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0matol\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1500\u001b[0m     assert_array_compare(compare, actual, desired, err_msg=str(err_msg),\n\u001b[0;32m-> 1501\u001b[0;31m                          verbose=verbose, header=header, equal_nan=equal_nan)\n\u001b[0m\u001b[1;32m   1502\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1503\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m//anaconda3/lib/python3.7/site-packages/numpy/testing/_private/utils.py\u001b[0m in \u001b[0;36massert_array_compare\u001b[0;34m(comparison, x, y, err_msg, verbose, header, precision, equal_nan, equal_inf)\u001b[0m\n\u001b[1;32m    825\u001b[0m                                 \u001b[0mverbose\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mverbose\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mheader\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mheader\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    826\u001b[0m                                 names=('x', 'y'), precision=precision)\n\u001b[0;32m--> 827\u001b[0;31m             \u001b[0;32mraise\u001b[0m \u001b[0mAssertionError\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmsg\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    828\u001b[0m     \u001b[0;32mexcept\u001b[0m \u001b[0mValueError\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    829\u001b[0m         \u001b[0;32mimport\u001b[0m \u001b[0mtraceback\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mAssertionError\u001b[0m: \nNot equal to tolerance rtol=1e-07, atol=0\n\nMismatch: 52%\nMax absolute difference: 89694930.34440386\nMax relative difference: 2.15625517e+09\n x: array([ 1.718282e+00,  7.182818e-01,  4.365637e-01,  3.096910e-01,\n        2.387639e-01,  1.938194e-01,  1.629165e-01,  1.404154e-01,\n        1.233235e-01,  1.099112e-01,  9.911218e-02,  9.023401e-02,...\n y: array([1.718282, 0.718282, 0.436564, 0.309691, 0.238764, 0.193819,\n       0.162916, 0.140415, 0.123323, 0.109911, 0.099112, 0.090234,\n       0.082808, 0.076507, 0.071093, 0.066392, 0.062273, 0.058633,..."
+     ]
+    }
+   ],
    "source": [
     "values = upwards_recursion(25)\n",
     "for value, exact_value in zip(values, exact):\n",
-    "    print(value, exact)\n",
+    "    print(value, exact_value)\n",
     "\n",
     "from numpy.testing import assert_allclose\n",
     "assert_allclose(values, exact)"
@@ -92,13 +146,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 37,
+   "metadata": {},
    "outputs": [],
    "source": [
-    "# ENTER YOUR CONCLUSION HERE"
+    "#такая большая разница будет возникать из-за того, что во время нашего подсчета мы используем приближенное значение е\n",
+    "#и такая ошибка каждый раз будет увеличиваться, из-за чего конечный ответ совершенно не совпадает с истнинным "
    ]
   },
   {
@@ -110,14 +163,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 46,
+   "metadata": {},
    "outputs": [],
    "source": [
     "def downwards_recursion(n):\n",
-    "    # ENTER YOUR CODE HERE"
+    "    #здесь необходимо задать отчет с которого мы будем начинать спускаться\n",
+    "    #в нашем случае будем считать, что I_{50} = 0  \n",
+    "    def rec(a):\n",
+    "        if a == 50 :\n",
+    "            return 0\n",
+    "        else:\n",
+    "            b = (rec(a+1) + 1)/(a)\n",
+    "            if a<= n:\n",
+    "                integrate.append(b)\n",
+    "        return b\n",
+    "    integrate = []\n",
+    "    rec(1)\n",
+    "    return integrate[::-1]"
    ]
   },
   {
@@ -131,13 +194,59 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.718281828459045 1.7182818284590453\n",
+      "0.7182818284590452 0.7182818284590452\n",
+      "0.43656365691809046 0.43656365691809046\n",
+      "0.30969097075427143 0.30969097075427143\n",
+      "0.23876388301708565 0.23876388301708565\n",
+      "0.19381941508542824 0.19381941508542824\n",
+      "0.16291649051256946 0.16291649051256946\n",
+      "0.14041543358798622 0.14041543358798622\n",
+      "0.12332346870388972 0.12332346870388973\n",
+      "0.10991121833500754 0.10991121833500754\n",
+      "0.09911218335007542 0.0991121833500754\n",
+      "0.09023401685082953 0.09023401685082952\n",
+      "0.08280820220995427 0.08280820220995427\n",
+      "0.07650662872940558 0.07650662872940558\n",
+      "0.0710928022116781 0.07109280221167809\n",
+      "0.0663920331751714 0.0663920331751714\n",
+      "0.062272530802742386 0.06227253080274239\n",
+      "0.05863302364662063 0.05863302364662064\n",
+      "0.05539442563917151 0.05539442563917152\n",
+      "0.052494087144258815 0.052494087144258815\n",
+      "0.049881742885176245 0.049881742885176245\n",
+      "0.04751660058870117 0.04751660058870116\n",
+      "0.0453652129514256 0.04536521295142559\n",
+      "0.04339989788278872 0.04339989788278872\n",
+      "0.04159754918692921 0.041597549186929206\n"
+     ]
+    }
+   ],
+   "source": [
+    "values = downwards_recursion(25)\n",
+    "for value, exact_value in zip(values, exact):\n",
+    "    print(value, exact_value)\n",
+    "\n",
+    "from numpy.testing import assert_allclose\n",
+    "assert_allclose(values, exact,atol = 1e-2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
    "outputs": [],
    "source": [
-    "# ENTER YOUR COMPARISON HERE"
+    "#В данном случае у нас не копится нигде ошибка из-за числа е, так как оно нигде не фигурирует, из-за чего неточность\n",
+    "#может накапливаться только из-за того, что мы считаем какой-то интеграл нулевым, который по факту им не является\n",
+    "#а она несильно влияет на итоговый результат"
    ]
   }
  ],
@@ -157,7 +266,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
