--- a/week_1_quadratic.ipynb
+++ b/week_1_quadratic.ipynb
@@ -4,22 +4,20 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Solve a quadratic equation, $x^2 + b x + c = 0$.\n",
-    "\n",
-    "\n",
-    "Write a function which receives $b$ and $c$, the coefficients of a monic quadratic polynomial, $x^2 + b x + c$, and returns the pair of its roots. Your function should always return two values, even if quadratic has a double root.\n",
-    "\n",
-    "For example, given a quadratic $x^2 - 2x + 1$, your function should return a pair of $(1, 1)$. Of course, in floating point, your answers may differ from an exact unity.\n",
-    "\n",
-    "Your function also must correctly handle complex roots (to this end, you might need the `cmath` module from the standard library)."
+    "# Решить квадратное уравнение $x^2 + bx + c = 0$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Функция $\\operatorname{solve\\_quad}$ получает на вход $b$ и $c$, которые являются коэффициентами квадратного трехчлена $x^2 + bx + c$, и возвращает пару корней. Функция возвращает два корня, даже если они совпали.\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 42,
+   "metadata": {},
    "outputs": [],
    "source": [
     "def solve_quad(b, c):\n",
@@ -35,26 +33,33 @@
     "    x1, x2 : float or complex\n",
     "       Roots.\n",
     "    \"\"\"\n",
-    "    # ... enter your code here ..."
+    "    # ... enter your code here ...\n",
+    "    import cmath\n",
+    "    import numpy as np\n",
+    "    #используем следующий алгоритм:\n",
+    "    #находим больший корень(формула сделана так, что не происходит вычитания маленького числа из большого с ошибкой)\n",
+    "    #находим второй корень по теореме Виета, делением коэффициента c на первый корень\n",
+    "\n",
+    "    if b > 0:\n",
+    "        x_1 = -(b + np.abs(b) * cmath.sqrt(1 - 4*c / (b**2))) * 0.5   \n",
+    "        x_2 = -2*c/(b + np.abs(b) * cmath.sqrt(1 - 4*c / (b**2)))   \n",
+    "    else:\n",
+    "        x_1 = (-b + np.abs(b) * cmath.sqrt(1 - 4*c / (b**2))) * 0.5\n",
+    "        x_2 = 2*c/(-b + np.abs(b) * cmath.sqrt(1 - 4*c / (b**2)))\n",
+    "    return(x_1,x_2)\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Test the your function on several examples against a calculation by hand. Once you're sure that your function works, try these five test cases below. \n",
-    "\n",
-    "Note that the last two test cases are special: they test whether your function handles extreme cases where a too simple approach is prone to a catastrophic cancellation. Make sure your function passes all five tests.\n",
-    "\n",
-    "This exercise is graded, each test case contributes a 20% of the grade. "
+    "Тестируем функцию на следующем наборе параметров:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 43,
+   "metadata": {},
    "outputs": [],
    "source": [
     "from numpy import allclose"
@@ -62,10 +67,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 44,
+   "metadata": {},
    "outputs": [],
    "source": [
     "variants = [{'b': 4.0, 'c': 3.0},\n",
@@ -77,25 +80,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n",
+      "True\n",
+      "True\n",
+      "True\n",
+      "True\n"
+     ]
+    }
+   ],
    "source": [
     "for var in variants:\n",
     "    x1, x2 = solve_quad(**var)\n",
     "    print(allclose(x1*x2, var['c']))"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -114,7 +118,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
